--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [build]
   publish = "static"
-  command = "python -m http.server 8000"
+  command = "echo 'Build complete'"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 404
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
 
 [context.production.environment]
   PYTHON_VERSION = "3.9"
